# cpp_chatsystem

./: .dockerignore  .gitignore  CLAUDE.md  FRONTEND_FIX_GUIDE.md  README.md  RELEASE_GUIDE.md  clean_all.sh  pyproject.toml  release-v1.0.sh  test_file_service.sh  tmp.md
ChatSystem-Backend/: 0_extract_content.py  CMakeLists.txt  DEPLOYMENT.md  DOCKER_ARCHITECTURE.md  GenInitAll.cmake  QUICK_START.md  all_extracted_code.txt  depends.sh  docker-compose.yaml  docker-compose.yaml.bac1  run_tests.sh  test_deserialize  test_deserialize.cpp
ChatSystem-Backend/1.Speech_Server/: CMakeLists.txt  Dockerfile  dockerfile  speech_server.conf
ChatSystem-Backend/1.Speech_Server/source/: speach_server.cc  speach_server.hpp
ChatSystem-Backend/1.Speech_Server/test/: speech_client.cc
ChatSystem-Backend/2.File_Server/: CMakeLists.txt  Dockerfile  dockerfile  wait_for_services.sh
ChatSystem-Backend/2.File_Server/source/: file_server.cc  file_server.hpp
ChatSystem-Backend/2.File_Server/test/: file_client.cc
ChatSystem-Backend/3.User_Server/: CMakeLists.txt  Dockerfile  dockerfile  user.sql  user_server.conf
ChatSystem-Backend/3.User_Server/source/: user_server.cc  user_server.hpp
ChatSystem-Backend/3.User_Server/test/: user_client.cc
ChatSystem-Backend/3.User_Server/test/es_test/: Makefile  main.cc
ChatSystem-Backend/3.User_Server/test/mysql_test/: main.cc  user.sql
ChatSystem-Backend/3.User_Server/test/redis_test/: Makefile  main.cc  redis_test
ChatSystem-Backend/4.Message_Transmit_Server/: CMakeLists.txt  Dockerfile  chat_session_member.sql  dockerfile  message_transmit_server.conf
ChatSystem-Backend/4.Message_Transmit_Server/source/: message_transmit_server.cc  transmite_server.cc  transmite_server.hpp
ChatSystem-Backend/4.Message_Transmit_Server/test/: transmite_client.cc  user_client.cc
ChatSystem-Backend/4.Message_Transmit_Server/test/mysql_test/: Makefile  chat_session_member.sql  main.cc  user.sql
ChatSystem-Backend/5.Message_Store_Server/: CMakeLists.txt  Dockerfile  ES_MYSQL_CONSISTENCY_SOLUTION.md  dockerfile  message.sql  message_store_server.conf
ChatSystem-Backend/5.Message_Store_Server/source/: message_store_server.cc  message_store_server.hpp
ChatSystem-Backend/5.Message_Store_Server/test/: message_store_client.cc
ChatSystem-Backend/5.Message_Store_Server/test/bugtest/: CMakeLists.txt  receiver.cpp  sender.cpp
ChatSystem-Backend/5.Message_Store_Server/test/es_test/: main.cc
ChatSystem-Backend/5.Message_Store_Server/test/mysql_test/: main.cc
ChatSystem-Backend/6.Friend_Server/: CMakeLists.txt  Dockerfile  chat_session.sql  chat_session_member.sql  friend_apply.sql  friend_server.conf  relation.sql
ChatSystem-Backend/6.Friend_Server/source/: friend_server.cc  friend_server.hpp
ChatSystem-Backend/6.Friend_Server/test/: friend_client.cc
ChatSystem-Backend/6.Friend_Server/test/mysql_test/: Makefile  chat_session.sql  chat_session_member.sql  friend_apply.sql  main.cc  relation.sql
ChatSystem-Backend/7.Gateway_Server/: CMakeLists.txt  Dockerfile  dockerfile
ChatSystem-Backend/7.Gateway_Server/source/: connection.hpp  gateway_server.cc  gateway_server.hpp
ChatSystem-Backend/7.Gateway_Server/test/: README.md  gateway_api_test.cc
ChatSystem-Backend/8.Agent_Server/: Dockerfile  PYTHON_SETUP.md  TEST_DATA.md  exp.txt  requirements.txt  test_sdk.py
ChatSystem-Backend/8.Agent_Server/examples/agent_chatsession/: code.html
ChatSystem-Backend/8.Agent_Server/examples/my-gpt-project/: package.json  pnpm-lock.yaml
ChatSystem-Backend/8.Agent_Server/examples/structured-outputs-assistant-final/: package-lock.json
ChatSystem-Backend/8.Agent_Server/sql/: init_agent_tables.sql  migrate_remove_task_tables.sql  migrate_simplify_agent.sql  update_agent_gpt5_mini_rename.sql  update_agent_to_deepseek.sql  update_agent_to_gpt5_mini.sql
ChatSystem-Backend/8.Agent_Server/src/: __init__.py  auth.py  config.py  main.py  providers.py
ChatSystem-Backend/8.Agent_Server/src/agents/: __init__.py  global_agent.py  (+1 more)
ChatSystem-Backend/8.Agent_Server/tests/: test_agent_api.js
ChatSystem-Backend/APIs/: Makefile  base.proto  base_pb2.py  file.proto  friend.proto  gateway.proto  message_storage.proto  message_transmit.proto  notify.proto  speech_recognition.proto  user.proto
ChatSystem-Backend/APIs/api_builds/: base.pb.cc  base.pb.h  file.pb.cc  file.pb.h  friend.pb.cc  friend.pb.h  gateway.pb.cc  gateway.pb.h  message_storage.pb.cc  message_storage.pb.h  message_transmit.pb.cc  message_transmit.pb.h  notify.pb.cc  notify.pb.h  speech_recognition.pb.cc  speech_recognition.pb.h  user.pb.cc  user.pb.h
ChatSystem-Backend/Common/: COMPONENTS_DOCS.md  SESSION_REFACTOR_PLAN.md  channel.hpp  dms.hpp  elasticsearch_basic.hpp  elasticsearch_user.hpp  es_user_CRUD.hpp  etcd.hpp  httplib.h  icsearch.hpp  logger.hpp  mysql_apply.hpp  mysql_chat_session.hpp  mysql_chat_session_member.hpp  mysql_message.hpp  mysql_odb_factory.hpp  mysql_relation.hpp  mysql_user.hpp  mysql_user_CRUD.hpp  rabbitmq.hpp  redis_CRUD.hpp  rpc_service_manager.hpp  utility.hpp  voice_recognizer.hpp
ChatSystem-Backend/Configs/: file_server.conf  friend_server.conf  gateway_server.conf  gateway_server_docker.conf  message_store_server.conf  message_transmit_server.conf  speech_server.conf  user_server.conf
ChatSystem-Backend/Examples/1.rpc/: discovery.cc  main.proto  registry.cc
ChatSystem-Backend/Examples/2.elasticsearch/: es_test.cc
ChatSystem-Backend/Examples/3.rabbitmq/: publisher.cc
ChatSystem-Backend/Examples/4.dms/: Makefile
ChatSystem-Backend/Examples/5.baidu_voice/: voice.cc
ChatSystem-Backend/Examples/6.odb_project_cmake/: CMakeLists.txt
ChatSystem-Backend/ODB/: Makefile  chat_session.hxx  chat_session_member.hxx  friend_apply.hxx  message.hxx  relation.hxx  user.hxx
ChatSystem-Backend/SQL_Code/: chat_session.sql  chat_session_member.sql  friend_apply.sql  init_all.sql  message.sql  relation.sql  user.sql
Docs-and-demos/demos/15.cmake/: CMakeLists.txt
Docs-and-demos/demos/16.docker/: CMakeLists.txt  WebServer  dockerfile  gflags.h  httplib.h  liarsbar.html  server.cpp
(+283 files in other folders)
